fix(java17): restore Java 17 compatibility and align project structure with MVVM - Replace List.getFirst() with Java 17-compatible alternatives - Fix affected production and test classes - Reorganize folder structure to enforce clearer MVVM separation